--- a/activity/package.json
+++ b/activity/package.json
@@ -14,6 +14,7 @@
     "jasmine": "^3.4.0",
     "jasmine-ts": "^0.3.0",
     "nyc": "^14.1.1",
+    "ts-node": "^8.1.0",
     "typescript": "^3.4.5"
   }
 }
