--- a/activity/package.json
+++ b/activity/package.json
@@ -13,6 +13,7 @@
     "@types/jasmine": "^3.3.12",
     "jasmine": "^3.4.0",
     "jasmine-ts": "^0.3.0",
+    "lodash": ">=4.17.13",
     "nyc": "^14.1.1",
     "mem": ">=4.0.0",
     "ts-node": "^8.1.0",
